fixed horizontal overflow

--- a/demo-app/css/main.css
+++ b/demo-app/css/main.css
@@ -92,6 +92,10 @@ section.login{z-index:1; animation:none}
   #v-sign:checked~section.sign {
   z-index: 2;
   animation: loading .1s ease forwards;
+
+  overflow-x: hidden;
+
+max-width: 100vw;
 }
 
 @keyframes loading {
